# fuzio-dex-contracts

./: .gitignore  Cargo.toml  README.md
artifacts/: cw20_base.wasm  fuzio_pool.wasm  fuzio_staking.wasm  token_pool_list.wasm
contracts/cw20-base/: Cargo.toml
contracts/fuzio-pool/: Cargo.toml  README.md
contracts/fuzio-pool/examples/: schema.rs
contracts/fuzio-pool/schema/: fuzio_pool.json  fuzio_swap_orders.json
contracts/fuzio-pool/schema/raw/: execute.json  query.json
contracts/fuzio-pool/src/: contract.rs  error.rs  msg.rs
contracts/fuzio-staking/: Cargo.toml  README.md
contracts/fuzio-staking/examples/: schema.rs
contracts/fuzio-staking/schema/: fuzio_staking.json
contracts/fuzio-staking/schema/raw/: execute.json  instantiate.json  response_to_all_stakers.json  response_to_config.json  response_to_staker_info.json  response_to_state.json
contracts/fuzio-staking/src/: contract.rs  error.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/fuzio-swap_fuziodex/: Cargo.toml  README.md
contracts/fuzio-swap_fuziodex/examples/: schema.rs
contracts/fuzio-swap_fuziodex/schema/: fuzio_swap_fuziodex.json
contracts/fuzio-swap_fuziodex/schema/raw/: execute.json
contracts/fuzio-swap_fuziodex/src/: contract.rs
contracts/fuzio-swap_orders/: Cargo.toml  README.md
contracts/fuzio-swap_orders/examples/: schema.rs
contracts/fuzio-swap_orders/src/: contract.rs  msg.rs
contracts/token-pool-list/: Cargo.toml  README.md
