[package]
name = "fuzio_swap_fuziodex"
version = "1.2.0"
authors = ["Keyne"]
edition = "2018"
description = "Cosmwasm AMM"
license = "Apache-2.0"


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cw0 = "0.10.3"
cw2 = "1.0.1"
cw20 = "1.0.1"
cw20-base = { version = "1.0.1", features = ["library"] }
cosmwasm-std = "1.2.5"
cosmwasm-storage = "1.2.5"
cw-storage-plus = "1.0.1"
schemars = "0.8.12"
serde = { version = "1.0.162", default-features = false, features = ["derive"] }
thiserror = "1.0.40"
cosmwasm-schema = "1.2.5"
